--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,7 @@ a {
 
 :root {
 	--black: #3B434E;
-	--light-gray: #EBEBEB;
+	--light-gray: #B3C0D9;
 	--white: white;
 	--primary: #7653FC;
 	--primary-hover: #5221FF;
